k8s/06-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: notes
spec:
  replicas: 1
  selector:
    matchLabels: { app: web }
  template:
    metadata:
      labels: { app: web }
    spec:
      containers:
        - name: web
          image: nuxtdemo-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
