k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-ingress
  namespace: notes
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # API goes first so it matches before "/"
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 4000
          # Everything else -> Nuxt web
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
